# Petropolitan-Science-Re-Search

./: README.md  ol2449486.odt
1/: Makefile  parallel  parallel.cpp  simple  simple.cpp
2/: CMakeLists.txt  solve  solve.cpp  test  test.cpp
3/: result.xlsx  sample.xlsx  solve.py
